--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     <!-- This template defaults to the iOS CSS theme. To support both iOS and material design themes, see the Framework7 Tutorial at the link below:
         http://www.idangero.us/framework7/tutorials/maintain-both-ios-and-material-themes-in-single-app.html
      -->
-
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+               google_ad_client: "ca-pub-9286697504300611",
+               enable_page_level_ads: true
+          });
+     </script>
     <link rel="stylesheet" href="lib/framework7/css/framework7.ios.min.css">
     <link rel="stylesheet" href="lib/framework7/css/framework7.ios.colors.min.css">
 
