--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                                                                 <button type="button" class="button button-big button-fill color-red" style="width:100%" id="clr-recipe"><img aria-hidden="true" src="images/clean-16x16.png" alt="Broom Icon"> Clear recipe</button>
                                                                         </div>
                                                                         <div class="col-50">
-                                                                                <button type="button" class="button button-big button-fill button-fill color-green" style="width:100%"id="bake"> <span>Bake!</span></button> 
+                                                                                <button type="button" class="button button-big button-fill button-fill color-green" style="width:100%"id="bake"> <span>GO!</span></button> 
                                                                         </div>
                                                                       
                                                                       </div>  
@@ -426,8 +426,8 @@
     </div>
     <div class="popup popup-about">
             <div class="content-block">
-              <p>About</p>
-              <p><a href="#" class="close-popup">Close popup</a></p>
+                    <h1 style="text-align: center;">About</h1>
+              <p style="top: 35px;position: absolute;color:#333;"><a style="color:#333;" href="#" class="close-popup">Close</a></p>
               <p>Insomnia Encoding & Decoding app is meant for you to use when you need to do encoding or decoding on the go</p>
             </div>
           </div>
@@ -435,10 +435,10 @@
 
           <div class="popup popup-help">
                 <div class="content-block">
-                  <p>Help</p>
-                  <p><a href="#" class="close-popup">Close popup</a></p>
+                  <h1 style="text-align: center;">Help</h1>
+                  <p style="top: 35px;position: absolute;color:#333;"><a style="color:#333;" href="#" class="close-popup">Close </a></p>
                   <div class="content-block-title">FAQ</div>
-<div class="content-block accordion-list custom-accordion">
+<div class="content-block accordion-list custom-accordion inset">
   <div class="accordion-item">
     <div class="accordion-item-toggle">
       <i class="icon icon-plus">+</i>
@@ -459,6 +459,16 @@
       <p>Yes, you can. You can add as many as you like, but be aware that it will slow down the process</p>
     </div>
   </div>
+  <div class="accordion-item">
+        <div class="accordion-item-toggle">
+          <i class="icon icon-plus">+</i>
+          <i class="icon icon-minus">-</i>
+          <span>How do I delete a recipe? </span>
+        </div>
+        <div class="accordion-item-content">
+          <p>By draging/flinging it away</p>
+        </div>
+      </div>
  
 </div>         
              
