--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
           <p>By draging/flinging it away</p>
         </div>
       </div>
+      <div id="keybList"></div>
  
 </div>         
   
