--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                                           <div class="messagebar-area">
                                                 <form id="sendMessage" class="chat-message clearfix">
                                                         <input type="text" name="message-to-send" id="message-to-send" placeholder="Type your message" rows="1"></input>
-                                                        <input type="submit" class=" link send-link" value="Send"></input>
+                                                        <button type="submit" style="margin-top:5px;float:right;margin-right:5px;"class="link send-link button button-fill" id="message-send" value="Send">Send</button>
                                                     </form>
                         </div>
                       </div>
@@ -602,15 +602,8 @@
                             {{/if}}
                         </script>  
                     </div></div>
-          <div class="picker-modal picker-1">
-            <div class="toolbar">
-              <div class="toolbar-inner">
-                <div class="left" style="color:#fff;margin-left:20px;">Codex</div>
-                <div class="right"><a href="#" class="close-picker" style="color:#fff;margin-right:20px;">Done</a></div>
-              </div>
+                </div>
             </div>
-           
-          </div>
 
 
           <div class="popup popup-help">
